add an experiment and two citations

--- a/Cooperative_Allocation_and_Scheduling_of_Tasks_for_Minimizing_Interval_Data_Sampling_in_WSNs.tex
+++ b/Cooperative_Allocation_and_Scheduling_of_Tasks_for_Minimizing_Interval_Data_Sampling_in_WSNs.tex
@@ -43,7 +43,7 @@ Jianping~Yin
 }
 
 \begin{abstract}
-Data sharing amongst multiple sampling tasks  significantly reduces energy consumption and communication cost in low-power WSNs. Conventional proposals have already scheduled the discrete point sampling tasks to decrease the amount of sampled data. However, less effort has been done for the applications which generate continuous interval sampling tasks. Moreover, most of pioneering work limits its view to schedule \emph{sampling interval} of tasks on a single sensor node, and neglects the process of task allocation in WSNs. Therefore, the gained efforts in the prior work can not benefit a large-scale wireless sensor network because the performance of a scheduling method is sensitive to the strategy of task allocation. Broadening the scope to an entire network, this paper is the first work to maximize data sharing amongst continuous interval sampling tasks by jointly optimizing task allocation and scheduling of \emph{sampling interval}  in WSNs.  First, we formalize the joint optimization problem and prove it NP-hard. Second, we present \emph{COMBINE} operation which is the crucial ingredient of our solution. \emph{COMBINE} is a 2-factor approximate algorithm for maximizing data sharing amongst overlapping tasks.  Furthermore, our heuristic named \emph{CATS} is proposed. \emph{CATS} is 2-factor approximate algorithm for jointly allocating tasks and scheduling \emph{sampling interval} so as  to maximize data sharing in the entire network.  Extensive empirical study is conducted on a testbed of $50$ sensor nodes to evaluate the effectiveness of our methods. Besides, the scalability of our methods is verified by using the widely-used simulation tool, i.e., TOSSIM. The experimental results indicate that our methods successfully reduce the volume of sampled data and decrease the energy consumption significantly.
+Data sharing amongst multiple sampling tasks  significantly reduces energy consumption and communication cost in low-power WSNs. Conventional proposals have already scheduled the discrete point sampling tasks to decrease the amount of sampled data. However, less effort has been done for the applications which generate continuous interval sampling tasks. Moreover, most of pioneering work limits its view to schedule \emph{sampling interval} of tasks on a single sensor node, and neglects the process of task allocation in WSNs. Therefore, the gained efforts in the prior work cannot benefit a large-scale wireless sensor network because the performance of a scheduling method is sensitive to the strategy of task allocation. Broadening the scope to an entire network, this paper is the first work to maximize data sharing amongst continuous interval sampling tasks by jointly optimizing task allocation and scheduling of \emph{sampling interval}  in WSNs.  First, we formalize the joint optimization problem and prove it NP-hard. Second, we present \emph{COMBINE} operation which is the crucial ingredient of our solution. \emph{COMBINE} is a 2-factor approximate algorithm for maximizing data sharing amongst overlapping tasks.  Furthermore, our heuristic named \emph{CATS} is proposed. \emph{CATS} is 2-factor approximate algorithm for jointly allocating tasks and scheduling \emph{sampling interval} so as  to maximize data sharing in the entire network.  Extensive empirical study is conducted on a testbed of $50$ sensor nodes to evaluate the effectiveness of our methods. Besides, the scalability of our methods is verified by using the widely-used simulation tool, i.e., TOSSIM. The experimental results indicate that our methods successfully reduce the volume of sampled data and decrease the energy consumption significantly.
 \end{abstract}
 
 \begin{CCSXML}
@@ -669,6 +669,7 @@ To be clear, we take an example to illustrate the process of transformation. As 
 In this section, we first introduce our experimental environment and settings. Then, we evaluate the effectiveness of our proposed algorithms by using a physical testbed containing $50$ wireless sensor nodes. Finally, the widely-used simulation tool, i.e., TOSSIM, is used to verify the scalability of our method.
 
 \subsection{Experimental environment and settings}
+\label{section_environment_settings}
 \begin{figure}[t]
 \centering
 \subfigure{\includegraphics[width=0.8\columnwidth]{Figures/testbed_image}\label{figure_testbed_image}}
@@ -726,11 +727,18 @@ andp \ref{allocation_combine} which are represented by \emph{RANDOM}, \emph{PRUN
 
 \begin{figure*}[!t]
 \centering
-\subfigure[$k\mathrm{=}5$, $r\mathrm{=}2$, the testbed]{\includegraphics[width=0.245\columnwidth]{Figures/evaluation2_data_loss_rate}\label{evaluation2_data_loss_rate}}
-\hspace{20pt}\subfigure[$k\mathrm{=}5$, $r\mathrm{=}2$, TOSSIM]{\includegraphics[width=0.245\columnwidth]{Figures/evaluation3_received_data}\label{evaluation3_received_data}}
-\hspace{20pt}\subfigure[$k\mathrm{=}5$, $r\mathrm{=}2$, TOSSIM]{\includegraphics[width=0.246\columnwidth]{Figures/evaluation3_data_loss_rate}\label{evaluation3_loss_rate}}
-\caption{A comparison of data loss rate in the testbed is presented by varying the number of nodes in (a). The number of received packets is compared by varying the number of nodes in (b) and so is the data loss rate in (c) for large scale wireless sensor networks simulated in TOSSIM.}
+\subfigure[$k\mathrm{=}5$, $r\mathrm{=}2$, the testbed]{\includegraphics[width=0.27\columnwidth]{Figures/evaluation2_data_loss_rate}\label{evaluation2_data_loss_rate}}
+\hspace{1pt}\subfigure[The general network]{\includegraphics[width=0.33\columnwidth]{Figures/evaluation4_scene}\label{evaluation4_scene}}
+\hspace{1pt}\subfigure[$k\mathrm{=}5$, $r\mathrm{=}2$, the general network]{\includegraphics[width=0.3\columnwidth]{Figures/evaluation4_data_loss_rate}\label{evaluation4_data_loss_rate}}
+\caption{A comparison of data loss rate in the testbed is presented by varying the number of nodes in (a). Besides, A general wireless sensor network is deployed by using $22$ nodes with $k=5$ and $r=2$. The yellow star means the collection node; while the red stars represent other nodes in the network, and some of their enlarged pictures are shown as examples. The data loss rate is compared by adopting different strategies of data sampling in (c).}
 \label{evaluation3}
+\end{figure*}
+ 
+ \begin{figure*}
+\centering
+\subfigure[$k\mathrm{=}5$, $r\mathrm{=}2$, TOSSIM]{\includegraphics[width=0.26\columnwidth]{Figures/evaluation3_received_data}\label{evaluation3_received_data}}
+\hspace{20pt}\subfigure[$k\mathrm{=}5$, $r\mathrm{=}2$, TOSSIM]{\includegraphics[width=0.26\columnwidth]{Figures/evaluation3_data_loss_rate}\label{evaluation3_loss_rate}}\caption{The number of received packets is compared by varying the number of nodes in (a) and so is the data loss rate in (b) for large scale wireless sensor networks simulated in TOSSIM.}
+\label{figure_evaluation4_scene}
 \end{figure*}
 
 \begin{figure*}
@@ -740,17 +748,33 @@ andp \ref{allocation_combine} which are represented by \emph{RANDOM}, \emph{PRUN
 \label{figure_appendix}
 \end{figure*}
 
+
+
 In Fig. \ref{evaluation2_data_sampled_tasks}, we vary the number of sampling tasks in WSNs to compare the number of transmitted packets. By default, $k$ is set to $5$ and $r$ is set to $2$.  Fig. \ref{evaluation2_data_sampled_tasks} shows  the number of transmitted packets increases with the number of tasks. Moreover, \emph{PRUNE} and \emph{COMBINE} significantly decrease unnecessary sampled data than \emph{RANDOM}, especially when the number of tasks grows. Precisely, when the cardinality of a task set is larger than $600$, the number of transmitted tasks produced by the \emph{COMBINE} seems to be half of that brought by \emph{RANDOM}. In Fig. \ref{evaluation2_data_sampled_r}, we compare the number of transmitted packets by varying $r$ from $2$ to $6$ under the setting of  $k\mathrm{=}8$. It is obvious that both \emph{PRUNE} and \emph{CATS} reduce more transmitted packets than \emph{RANDOM} does. Another observation is that the advantage of \emph{PRUNE} and \emph{CATS} becomes less significant when the growth of $r$. That is because when $r$ increases, more candidate sensor nodes are involved to be identified to execute a task. The randomness of \emph{RANDOM} is weakened. Particularly, when $r$ equals $k$, \emph{RANDOM} provides a deterministic solution which shares the same performance with \emph{PRUNE} and \emph{CATS}.
 
 It is difficult to derive an effective optimal solution for the joint optimization problem. However, when the scale of tasks is small, we can find the optimal result by using a brute-force method. To evaluate the performance of our method rigorously, we compare the number of transmitted packets on each method by varying the number of tasks and the value of $r$. In Fig. \ref{evaluation2_optimal1}, we display three groups of tasks and each of which has five tasks. The interval length of a task is set to $1/4$, $1/2$, and $3/4$ of its window size in the group $1$, $2$, and $3$, respectively. These tasks appear in time slot $[0,\; 20]$ randomly. Here, $k\mathrm{=}5$, $r\mathrm{=}2$. The optimal method is denoted by \emph{OPTIMAL}. It is clear that the number of transmitted packets increases with the  expansion of the interval length. \emph{PRUNE} and \emph{CATS} perform better than \emph{RANDOM} and are closely to the optimal allocation solution, i.e., \emph{OPTIMAL}. This confirms the conclusion of  Theorem \ref{theorem_allocation} again which clarifies that our greedy allocation algorithm is a 2-factor approximation  of the optimal solution. In Fig. \ref{evaluation2_optimal2}, we set $k\mathrm{=}8$, and modify the value of $r$ from $2$ to $6$. A quick conclusion drawn from the figure illustrates that the number of transmitted packets increases with the growth of $r$. Under such condition,  the \emph{CATS} achieves greatly smaller number of transmitted packets than twice of that produced by the optimal solution. It verifies the conclusion of Theorem \ref{theorem_allocation} again.
 
-Large amount of  sampled data definitely leads to server delay and congestion  in WSNs, degrading the quality of data transmission as a result. In Fig. \ref{evaluation2_data_loss_rate}, we compare data loss rate of different methods by changing the number of nodes in WSNs. It is obvious that the data loss rate becomes larger when the scale of network increases. But \emph{PRUNE} and \emph{CATS} significantly derive the smaller data loss rate than \emph{RANDOM} does. This verifies the benefits of our solution on the improvement of the quality of data transmission by cutting down the unnecessary sampled data.
+Large amount of  sampled data definitely leads to server delay and congestion  in WSNs, degrading the quality of data transmission as a result. In Fig. \ref{evaluation2_data_loss_rate}, we compare data loss rate of different methods by changing the number of nodes in WSNs. It is obvious that the data loss rate becomes larger when the scale of network increases. But \emph{PRUNE} and \emph{CATS} significantly derive the smaller data loss rate than \emph{RANDOM} does. This verifies the benefits of our solution on the improvement of the quality of data transmission by cutting down the unnecessary sampled data. Additionally, we deploy a more general wireless sensor network which consists of $22$ nodes. As illustrated in Fig. \ref{evaluation4_scene}, the yellow star stands for the collection node, and the red stars are used to represent other nodes. Some enlarged pictures of those red stars are shown as examples. The wireless sensor network is a 5-coverage and 2-redundant network with $k=5$ and $r=2$. The sampling tasks are produced under the settings of Section \ref{section_environment_settings}. Moreover, the output power of each a sensor node is adjusted to be a high level in order to ensure that each an area of the network can be detected by at least 5 nodes. We conduct different experiments by varying the average number of tasks for a sensor node. For each an experiment, all the data can be collected for no more than 30 minutes. As illustrated in Fig. \ref{evaluation4_data_loss_rate}, we evaluate the loss rate of the sampled data when we adopts different strategies of data sampling. The average number of sampling tasks for a node varies from 1800 to 5400. It is obvious that \emph{CATS} and \emph{PRUNE} perform better than \emph{RANDOM} because the loss rate of sampled data caused by \emph{CATS} and \emph{PRUNE} is much less than that caused by \emph{RANDOM}. 
+
+%\begin{table}[b]
+%\centering
+%\tbl{The loss rate of sampled data when we vary the average number of sampling tasks for the network\label{table_evaluation4}}{
+%\begin{tabular}{|c|c|c|c|c|}
+%\hline
+%    Loss rate &  1800 & 2700 & 3600 & 5400\\ \hline
+%    RANDOM& 624(0.653) & 826(0.694) & 908(0.748) & 1210(0.776)\\ \hline
+%    PRUNE& 1190(0.339) & 1474(0.454) & 1832(0.491) & 2081(0.615)\\ \hline
+%    CATS& 1354(0.248) & 1992(0.262) & 2521(0.3) & 3623(0.329)\\ \hline
+%\end{tabular}}
+%\end{table}
+
+
 
 We conduct simulations for evaluating the scalability of our proposed algorithms for a large scale wireless sensor network. These simulations are implemented with TOSSIM which is a widely-used simulation tool for wireless sensor networks \cite{2003_TOSSIM}. We construct a grid network and the settings of the simulate network are listed in Fig. \ref{figure_appendix} which are widely accepted \cite{1999_wideband_channel_measurement}. As illustrated in Fig. \ref{evaluation3_received_data}, we compare the number of received data by varying the scale of the network.   We apparently observe that \emph{CATS} brings the smallest amount of received data when the scale of the network grows. The reason is that \emph{CATS} reduces more unnecessary sampled data than \emph{PRUNE} and \emph{RANDOM}. Noting that \emph{PRUNE} brings more received data than \emph{RANDOM} when the number of sensor nodes in the network is $121$ and $144$. The reason is that \emph{RANDOM} causes more severe loss of data than \emph{PRUNE} when the scale of the network is large. Although \emph{RANDOM} produces the largest volume of sampled data, the received data by using \emph{RANDOM} may be smaller than \emph{PRUNE} because of data loss. As illustrated in Fig. \ref{evaluation3_loss_rate}, the data loss rate in both \emph{CATS} and \emph{PRUNE} is much smaller than that in \emph{RANDOM}. It happens when the number of transmitted data in \emph{CATS} and \emph{PRUNE} is smaller than that in \emph{RANDOM}. In summary, \emph{CATS} is more suitable to be deployed for a large-scale wireless sensor network as it always performs much better than \emph{RANDOM}.
 
 \section{Discussion}
 \label{discussion}
-We have proposed methods of task allocation and scheduling of \emph{sampling interval} and given much theoretical analysis about their performance. As the question is general, we aim to provide a universal solution which does not rely on the details of network. The sink node runs CATS and gets the strategy of task allocation in a wireless sensor network. It then allocates the sampling tasks to the sensor nodes. The allocation message will be added into packets and disseminated to sensor nodes with sampling tasks together. Comparing to the volume of sampled data of sampling tasks, such expenditure on the allocation solution is rather few. Meanwhile, as illustrated in Section \ref{section_performance_wsn}, adopting the strategy of task allocation can reduce redundancy of sampling data by more than 30\%. Therefore, it is worthy to trading few expenditure for appreciable data sharing. Besides, some other details  such as protocols of communication and data routing do not impact performance of the proposed algorithms. We do not adopt optimization on such communication protocols or routing strategy. We aim to propose an effective solution for the joint optimization problem.
+We have proposed methods of task allocation and scheduling of \emph{sampling interval} and given much theoretical analysis about their performance. As the question is general, we aim to provide a universal solution which does not rely on the details of network. The sink node runs CATS and gets the strategy of task allocation in a wireless sensor network. It then allocates the sampling tasks to the sensor nodes. The allocation message will be added into packets and disseminated to sensor nodes with sampling tasks together. Comparing to the volume of sampled data of sampling tasks, such expenditure on the allocation solution is rather few. Meanwhile, as illustrated in Section \ref{section_performance_wsn}, adopting the strategy of task allocation can reduce redundancy of sampling data by more than 30\%. Therefore, it is worthy to trading few expenditure for appreciable data sharing \cite{Liu2012ISAR} \cite{Liu2013FADE}. Besides, some other details  such as protocols of communication and data routing do not impact performance of the proposed algorithms. We do not adopt optimization on such communication protocols or routing strategy. We aim to propose an effective solution for the joint optimization problem.
 
 
 The allocation of tasks involves assigning each task to $r$ out of $k$ candidate sensor nodes. The current allocation scheme seeks to fully exploit the benefits of data sharing amongst tasks. In reality, there still exists other important constraints that can be exploited to improve the proposed allocation schemes. Note that each sensor node is resource-constrained, i.e., it has limited computation and memory resources. If a sensor node has been allocated many sampling tasks, it may not handle all the tasks timely and exhaust the energy at early time. This problem cannot thus be simply addressed by limiting the number of tasks a sensor node carrying. The reason is that although different nodes have the same amount of sampling tasks, the real work load of  sensor nodes may have a considerable difference due to the data sharing strategy. Therefore, contemporary task allocation schemes can be more practical if we consider the load balance amongst sensor nodes. An effective method is to set a threshold for the constrained resource. Each allocation step makes sure that the threshold value is not exceeded. Algorithm \ref{allocation_prune} and Algorithm \ref{allocation_combine} are flexible to adjust for this tactics. When the  limited resource changes dynamically, the allocation problem will be more difficult to solve. We leave it as our future work.
