--- a/reference.bib
+++ b/reference.bib
@@ -1,3 +1,23 @@
+@article{Liu2012ISAR,
+  title={ISAR: Improved Situation-Aware Routing Method for Wireless Mesh Backbones},
+  author={Liu, Qiang and Yin, Jianping and Leung, V. C. M. and Cai, Zhiping},
+  journal={IEEE Communications Letters},
+  volume={16},
+  number={9},
+  pages={1404-1407},
+  year={2012},
+}
+
+@article{Liu2013FADE,
+  title={FADE: Forwarding Assessment Based Detection of Collaborative Grey Hole Attacks in WMNs},
+  author={Liu, Qiang and Yin, Jianping and Leung, Victor C. M. and Cai, Zhiping},
+  journal={IEEE Transactions on Wireless Communications},
+  volume={12},
+  number={10},
+  pages={5124-5137},
+  year={2013},
+}
+
 @book{max_dhp,
 author = {Ding-Zhu Du, Ker-I Ko, Xiaodong Hu},
 title = {Design and Analysis of Approximation Algorithms},
